refactor native crashes